# art-app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/app/: models.py  settings.py  test.py  urls.py
app/contact/: models.py  tests.py
app/contactus/: urls.py  views.py
app/gallery/: urls.py  views.py
app/helpers/models/: base.py  exceptions.py  structures.py
app/home/: urls.py  views.py
app/illustrator/: apps.py
app/templates/: home.html  style.css
